[gd_scene format=3 uid="uid://bqx2ykn100p8r"]

[ext_resource type="Script" uid="uid://cm6tsivyp7v4b" path="res://scripts/pause_menu.gd" id="1_pause"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0, 0, 0, 0.396078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.309804, 0.309804, 0.309804, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="PauseMenu" type="CanvasLayer" unique_id=711662410 groups=["pause_menu"]]
process_mode = 2
script = ExtResource("1_pause")

[node name="Panel" type="Panel" parent="." unique_id=470058369]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="CenterContainer" type="CenterContainer" parent="Panel" unique_id=929899743]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="Panel" parent="Panel/CenterContainer" unique_id=2014767628]
custom_minimum_size = Vector2(400, 280)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel/CenterContainer/BackgroundPanel" unique_id=2098580304]
layout_mode = 0
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer/BackgroundPanel/MarginContainer" unique_id=827958913]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Heading" type="Label" parent="Panel/CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer" unique_id=2042751196]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer" unique_id=851941008]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="SettingsButton" type="Button" parent="Panel/CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer" unique_id=907954646]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="QuitButton" type="Button" parent="Panel/CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer" unique_id=1046770070]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit to Main Menu"
